# autosuite-service

./: .coveragerc  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: ci.yml
engine/automation/playwright/locators/: common_locators.py  sauce_demo.py
engine/automation/playwright/pages/: base_page.py  common_page.py
engine/automation/playwright/session/: __init__.py  context_factory.py  injectors.py  (+2 more)
engine/core/: errors.py
engine/core/config/: envkeys.py  loader.py  schema.py
engine/core/constants/: flows.py  session.py  statuses.py
engine/core/models/: action_result.py  item_result.py
engine/flows/: registry.py
engine/flows/crawl_simple/: hooks.py  input.py  output.py  run.py
engine/flows/flow_sauce_demo/: hooks.py  input.py  output.py  run.py
engine/orchestration/: events.py  runner.py
engine/utils/unused/: jsonx.py
scripts/: test_all.sh
service/app/: deps.py  main.py  validation.py
service/app/exporters/: __init__.py  job_excel.py
service/app/registry/: bdd_map.py  form_registry.py
service/app/static/: style.css
service/app/utils/: jinja_filters.py  job_rows.py  nested_numbering.py  table_shape.py
service/app/views/: pages.py  partials.py
service/constants/: api.py
service/db/: models.py  repo.py  session.py  types.py
service/executor/: scheduler.py  worker.py
tests/: conftest.py
tests/e2e/system/: conftest.py  test_crawl_simple_end_to_end.py  test_flow_sauce_demo_end_to_end.py
tests/helpers/: settings.py
tests/integration/api/: conftest.py  test_jobs_create_crawl_simple.py  test_jobs_create_validation.py  test_jobs_idempotency_and_limits.py
tests/integration/context/: conftest.py  test_context_error_path.py  test_context_profile_integration.py  test_context_tracing.py  test_session_lifecycle.py
tests/integration/engine/: conftest.py  test_run_job_crawl_simple.py  test_run_job_dedupe_and_fail.py
tests/integration/executor/: __init__.py  conftest.py  test_executor_flow_drain.py  test_scheduler_capacity.py  test_scheduler_reconcile.py  test_worker_failure.py  test_worker_success.py
tests/integration/flows/: conftest.py  test_crawl_simple_run_item.py  test_flow_hooks_validation.py  test_flow_registry_integration.py  test_flow_sauce_demo_retries.py
tests/unit/context/: conftest.py  test_context_factory.py  test_context_injectors.py  test_context_policy.py
tests/unit/core/: test_action_item_result.py  test_errors.py
tests/unit/service/: test_validation.py
(+57 files in other folders)
