[project]
name = "autosuite-service"
version = "0.1.0"
description = "Automation suite microservice demo (FastAPI + Playwright)"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
exclude = [
    "scripts/test_scripts/*.py"
]

[tool.ruff.lint]
select = [
    "E", #pycodestyle
    "F", # pyflakes
    "I", #isort-style import order
    "UP", # pyupgrade (modernize syntax)
    "B", # bugbear (common bug trap)
    "PT", # pytest-style checks
    "SIM", # simplify expressions
    "S", #security (flake8-bandit)
]
ignore = [
    "E501", # let Black manage the line length
    "UP046",  # allow Generic[T] instead of PEP695 generics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes

    # PT006: Wrong type passed to first argument of `pytest.mark.parametrize`
    # Reason: This rule is ignored to avoid conflict with PyCharm/IntelliJ IDE
    # inspections which mark the required parentheses as redundant.
    "PT006"
]
"engine/automation/playwright/*.py" = [
    "S101", "ARG", "FBT", "PLR2004", "S311",
]
# This rule is valid for pure Python, but it produces false positives (anti-patterns)
# in FastAPI dependency injection (DI) markers (e.g., `Depends(get_db)`).
# FastAPI handles these markers correctly at runtime to build the dependency graph.
# We explicitly ignore B008 in API routers/views.
"service/app/api/v1/history.py" = ["B008"]
"service/app/api/v1/jobs.py" = ["B008"]
"service/app/views/pages.py" = ["B008"]
"service/app/views/partials.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["autosuite-service"]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true

[tool.coverage.run]
branch = true
source = ["engine", "service"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
